[gd_scene load_steps=12 format=3 uid="uid://cjjo3y72w15ku"]

[ext_resource type="Texture2D" uid="uid://cb43urx2rssbl" path="res://Tilesets/slime_enemy.png" id="1_85wj1"]
[ext_resource type="Script" path="res://Character/Enemy/enemy.gd" id="1_ae2ep"]

[sub_resource type="CircleShape2D" id="CircleShape2D_w0507"]
radius = 3.16228

[sub_resource type="AtlasTexture" id="AtlasTexture_i3l6p"]
atlas = ExtResource("1_85wj1")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvoeg"]
atlas = ExtResource("1_85wj1")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_or75d"]
atlas = ExtResource("1_85wj1")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbn2h"]
atlas = ExtResource("1_85wj1")
region = Rect2(48, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_ieenp"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i3l6p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvoeg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_or75d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lbn2h")
}],
"loop": true,
"name": &"move",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_yrs18"]
radius = 121.264

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3687p"]
bg_color = Color(0.898039, 0.509804, 0, 1)
border_color = Color(0, 0, 0, 1)
corner_radius_top_left = 9
corner_radius_top_right = 9
corner_radius_bottom_right = 9
corner_radius_bottom_left = 9

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6npw3"]
bg_color = Color(0.301961, 0.709804, 0, 1)

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
collision_mask = 3
script = ExtResource("1_ae2ep")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -2)
shape = SubResource("CircleShape2D_w0507")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -5)
scale = Vector2(1.5, 1.5)
sprite_frames = SubResource("SpriteFrames_ieenp")
animation = &"move"

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
shape = SubResource("CircleShape2D_yrs18")

[node name="EnemyHealth" type="ProgressBar" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = -17.0
offset_top = -18.0
offset_right = 163.0
offset_bottom = 16.0
grow_horizontal = 2
scale = Vector2(0.2, 0.2)
size_flags_horizontal = 10
theme_override_styles/background = SubResource("StyleBoxFlat_3687p")
theme_override_styles/fill = SubResource("StyleBoxFlat_6npw3")
value = 50.0

[connection signal="body_entered" from="AttackArea" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="AttackArea" to="." method="_on_attack_area_body_exited"]
